[package]
name = "audio_tools"
version = "0.2.0"
authors = ["Kevin Egger"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
regex = "1.3"
notify-rust = "3.6"
log = "0.4"
simplelog = "^0.7"

# Need newer Ubuntu for those.
# libpulse-binding = "0.1"
# rust-pulsectl = "0.2.6"
